--- a/Frontend/pubspec.yaml
+++ b/Frontend/pubspec.yaml
@@ -9,16 +9,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.8
-  google_fonts: ^6.2.1
-  fluentui_system_icons: ^1.1.248
-  drop_shadow: ^0.1.0
-  
+  cupertino_icons: 1.0.8
+  google_fonts: 6.2.1
+  fluentui_system_icons: 1.1.248
+  drop_shadow: 0.1.0
+  http: 1.2.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: 3.0.0
+
 flutter:
   uses-material-design: true
   assets:
