--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,8 @@ dependencies:
   fluentui_system_icons: 1.1.248
   drop_shadow: 0.1.0
   http: 1.2.2
-
+  provider: 6.1.2
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
